--- a/mantencion.html
+++ b/mantencion.html
@@ -74,50 +74,44 @@
     <div class="container-fluid">
       <img src="./img/taller-2.jpg" alt="Banner" class="banner">
       <div class="image-gallery">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="./img/servicio-4.jpg" class="img-fluid rounded-start" alt="Imagen 1">
-            </div>
-            <div class="col-md-8">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="./img/servicio-4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title 1</h5>
+                <h5 class="card-title">Mantenimiento expres</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary"></small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./img/servicio-5.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mantenimiento de suspension</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary"></small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="./img/servicio-6.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Mantenimiento Full</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-body-secondary"></small>
               </div>
             </div>
           </div>
         </div>
-        
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="./img/servicio-5.jpg" class="img-fluid rounded-start" alt="Imagen 2">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title 2</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="./img/servicio-6.jpg" class="img-fluid rounded-start" alt="Imagen 3">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
