--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="servicio de mantenimiento para bicicletas">
+    <meta name="keywords" content="noticias,bicicletas,mantenimiento,bike,full,express,suspension">
     <link rel="stylesheet" href="./css/style.css" />
     <title>Asprino Bike</title>
     <link
