--- a/mantencion.html
+++ b/mantencion.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="servicio de mantenimiento para bicicletas empresa dedicada a el cuidado de tu bicicleta blog informativo de las ultimas novedades indumentaria y repuestos ">
+
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Asprino Bike</title>
+    <title>Servicios</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
