--- a/ubicacion.html
+++ b/ubicacion.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="servicio de mantenimiento para bicicletas empresa dedicada a el cuidado de tu bicicleta">
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Asprino Bike</title>
+    <title>Ubicación</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -74,16 +75,16 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/bike-1.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/bike-1.jpg" class="d-block w-100" alt="bike-1" />
         </div>
         <div class="carousel-item">
-          <img src="./img/bike-2.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/bike-2.jpg" class="d-block w-100" alt="bike-2" />
         </div>
         <div class="carousel-item">
-          <img src="./img/bike-3.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/bike-3.jpg" class="d-block w-100" alt="bike-3" />
         </div>
         <div class="carousel-item">
-          <img src="./img/bike-4.jpg" class="d-block w-100" alt="..." />
+          <img src="./img/bike-4.jpg" class="d-block w-100" alt="bike-4" />
         </div>
       </div>
       <button
@@ -113,10 +114,10 @@
           <a
             ><iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.0902484256585!2d-70.64802542427435!3d-33.44695519733329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c57532cc02d7%3A0x65bc9246c195b00b!2sSanta%20Rosa%20231%20Condominio!5e0!3m2!1ses-419!2scl!4v1690053971050!5m2!1ses-419!2scl"
-              width="600"
-              height="450"
+              width="100%"
+              height="300"
               style="border: 0"
-              allowfullscreen=""
+              allowfullscreen="img-fluid"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe
