--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>Siguenos en las redes</p>
+      <div class="rede">
+        <img src="./img/facebook.svg" alt="logo facebook">
+        <img src="./img/github.svg" alt="logo github">
+        <img src="./img/instagram.svg" alt="logo instagram">
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
